2004-05-11 Carlos Guzman Alvarez  <carlosga@telefonica.net>

	* Mono.Security.Protocol.Tls.Handshake.Client/TlsServerCertificate.cs:

		- Added fix for better handling of exceptions when
		building the X509 Certificate chain.

2004-04-22  Sebastien Pouliot  <sebastien@ximian.com>

	* TlsClientCertificateVerify.cs: Use Buffer.BlockCopy instead of 
	Array.Copy.
	* TlsServerCertificate.cs: Changed KeyUsage to KeyUsages and CertType 
	to CertTypes.

2004-03-19  Sebastien Pouliot  <sebastien@ximian.com>

	* TlsClientKeyExchange.cs: Fixed key pair used to encrypt pre-master
	secret for exportable ciphers - must use the public key received in 
	ServerKeyExchange.

2004-03-10 Carlos Guzman Alvarez  <carlosga@telefonica.net>

	* Mono.Security.Protocol.Tls.Handshake.Client/TlsClientCertificateVerify.cs:
	* Mono.Security.Protocol.Tls.Handshake.Client/TlsServerCertificateRequest.cs:
	* Mono.Security.Protocol.Tls.Handshake.Client/TlsServerFinished.cs:
	* Mono.Security.Protocol.Tls.Handshake.Server/TlsClientCertificateVerify.cs:
	* Mono.Security.Protocol.Tls.Handshake.Server/TlsServerCertificateRequest.cs:
	* Mono.Security.Protocol.Tls.Handshake.Server/TlsServerFinished.cs:

		- Fixed meesage type definition.

2004-03-04 Carlos Guzman Alvarez  <carlosga@telefonica.net>

	* Mono.Security.Protocol.Tls.Handshake.Client/TlsServerHelloDone.cs:
	* Mono.Security.Protocol.Tls.Handshake.Server/TlsServerHelloDone.cs:

        - Fixed message type.

2004-02-26  Sebastien Pouliot  <sebastien@ximian.com>

	* TlsServerCertificate.cs: Certificate validation has been activated.

2004-02-26 Carlos Guzman Alvarez  <carlosga@telefonica.net>

	* Mono.Security.Protocol.Tls.Handshake.Client/TlsServerFinished.cs:

		- Added changes for better handling of ClientHelloRequest messages.

2004-02-21  Carlos Guzman Alvarez  <carlosga@telefonica.net>

    * TlsServerHello: Fix for handle SecurityProtocolType.Default.

2004-02-20  Sebastien Pouliot  <sebastien@ximian.com>
